# matmul-cpp

./: CMakeLists.txt  README.md  main.cpp  matmul.cpp  matmul.cu  matmul.h  matmul_binding.cpp  matmul_test.cpp  matrix_utils.cpp  matrix_utils.h  matutils_test.cpp
include/: matmul.h  matrix_utils.h
src/: matmul.cpp  matmul_binding.cpp  matrix_utils.cpp
tests/: test_matmul.py
